# omni-cli

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  SoT_Method.md  omni.example.toml  omni.keys.example.toml  pyproject.toml  sot.example.toml  sot.keys.example.toml  where_am_i.py
mcps/: test.py
omni_cli/: __main__.py  cli.py  constants.py  mcp_client.py  message_builder.py  paths.py  prompting.py  query.py  runtime.py  session_store.py  sot.py  source_of_truth.py
omni_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
omni_cli/config/: __init__.py  app.py  prompts.py
omni_cli/providers/: __init__.py  base.py  factory.py  openai_compat.py
omni_cli/tools/: __init__.py  registry.py  schemas.py
omni_cli/tools/editor/: apply_edits.py  edit.py  write.py
omni_cli/tools/fs/: delete.py  list_dir.py
omni_cli/tools/reader/: image.py  main.py  media.py  notebook.py  pdf.py
omni_cli/tools/search/: search_code.py
omni_cli/tools/session/: control.py  delegate.py  list_tasks.py
omni_cli/utils/: __init__.py
prompt_tests/: agent_test.md  seppuku_test.md
sot_cli/: __main__.py  cli.py  constants.py  hyper_compress.py  mcp_client.py  message_builder.py  paths.py  prompting.py  query.py  runtime.py  session_store.py  sot.py  source_of_truth.py  spinners.py
sot_cli/config/: __init__.py  app.py  prompts.py
sot_cli/providers/: __init__.py  base.py  bedrock_converse.py  factory.py  openai_compat.py
sot_cli/tools/: __init__.py  core.py  registry.py  schemas.py
sot_cli/utils/: __init__.py  dates.py  text.py
(+26 files in other folders)
